adhocracy-plus/assets/scss/components/_footer.scss
.footer {
    border-top: 2px solid $brand-primary;
}

.footer--cms {
    background-color: $bg-light;
}

.footer__link {
    padding-right: $padding;

    a {
        font-weight: normal;
    }
}

.footer__description {
    font-family: $font-family-serif;
}

.footer__margin-for-banner {
    margin-bottom: 2 * $spacer;

    @media screen and (min-width: $breakpoint) and (max-width: $breakpoint-lg-down) {
        margin-bottom: 3.5 * $spacer;
    }
}

.navbar-brand {
    font-size: $font-size-md;
}

.footer-upper__text {
    font-weight: $demi-bold;
    color: $gray-lighter;
}

.footer-upper__navbar-nav {
    text-align: center;

    @media screen and (min-width: $breakpoint) {
        flex-flow: row wrap;
        justify-content: space-evenly;
    }

    .nav-item {
        padding-right: $spacer;
    }
}

.footer-upper__nav-link {
    display: inline;
    color: $gray-lighter;

    &:hover {
        color: $brand-primary;
        text-decoration-line: underline;
    }
}

